--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                         </div><!-- end image-box -->
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="normal-box clearfix">
+                        <div class="normal-box clearfix solution">
                             <div class="details">
                                 <h4> Comprehensive Solutions </h4>
                                 <p>From design to execution, we handle everything, including turnkey projects, structural engineering, and interior design.
@@ -499,9 +499,38 @@
                             </div>
                         </div><!-- end image-box -->
                     </div><!-- end col -->
-                </div><!-- end row -->
+                   
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="normal-box clearfix sustainable">
+                            <div class="details">
+                                <h4>  Vasthu-Compliant & Sustainable Designs </h4>
+                                <p>We integrate traditional wisdom with modern aesthetics to create spaces that are both functional and harmonious.
+                                </p>
+                                <a href="#" class="readmore">Read More</a>
+                            </div>
+                        </div><!-- end image-box -->
+                    </div>
+                    
+                </div>
+                <!-- end row -->
 
-                <hr class="invis">
+               <!-- end row -->
+            </div><!-- end container -->
+        </section>
+        <section id="video" class="video-section section">
+            <div class="overlay offer"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="tagline-message text-center">
+                            <h3>Why Choose House of Designs?</h3>
+                        </div>
+                    </div><!-- end col -->
+                </div><!-- end row -->
+            </div><!-- end container -->
+        </section>
+        <section class="section bglight">
+            <div class="container">
 
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12">
@@ -536,9 +565,9 @@
                             <div class="image-box-overlay"></div>
                         </div><!-- end image-box -->
                     </div><!-- end col -->
-                </div><!-- end row -->
-            </div><!-- end container -->
-        </section><!-- end section -->
+                </div>
+
+            </div></section><!-- end section -->
 
         <section class="section bgwhite">
             <div class="container">
