social meadia andportfolio

--- a/page-contact.html
+++ b/page-contact.html
@@ -123,108 +123,22 @@
 
         <header class="header normal-header desktop-menu hidden-md-down hidden-sm-down hidden-xs-down">
             <div class="container-fluid">
-                <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
+                <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
                     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt=""></a>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav">
-                            <li class="nav-item">
+                            <li class="nav-item active">
                                 <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="page-about.html">About</a>
                             </li>
-                            <li class="nav-item dropdown has-submenu">
-                                <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
-                                <ul class="dropdown-menu" aria-labelledby="dropdown02">
-                                    <li><a class="dropdown-item" href="#">Custom Pages <span class="hidden-md-down hidden-sm-down hidden-xs-down"><i class="fa fa-angle-right"></i></span></a>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="page-about.html">About us</a></li>
-                                            <li><a class="dropdown-item" href="page-services.html">Our Services</a></li>
-                                            <li><a class="dropdown-item" href="page-contact.html">Contact us</a></li>
-                                            <li><a class="dropdown-item" href="page-testimonials.html">Testimonials</a></li>
-                                            <li><a class="dropdown-item" href="page-pricing.html">Pricing & Plan</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a class="dropdown-item" href="blog.html">Blog Pages <span class="hidden-md-down hidden-sm-down hidden-xs-down"><i class="fa fa-angle-right"></i></span></a>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="blog.html">Blog Default</a></li>
-                                            <li><a class="dropdown-item" href="blog-grid.html">Blog Grid</a></li>
-                                            <li><a class="dropdown-item" href="blog-list.html">Blog List</a></li>
-                                            <li><a class="dropdown-item" href="blog-fullwidth.html">Blog Fullwidth</a></li>
-                                            <li><a class="dropdown-item" href="blog-category.html">Blog Category</a></li>
-                                            <li><a class="dropdown-item" href="blog-author.html">Blog Author</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a class="dropdown-item" href="single.html">Single Blog <span class="hidden-md-down hidden-sm-down hidden-xs-down"><i class="fa fa-angle-right"></i></span></a>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="single.html">Single Default</a></li>
-                                            <li><a class="dropdown-item" href="single-fullwidth.html">Single Fullwidth</a></li>
-                                            <li><a class="dropdown-item" href="single-slider.html">Single Gallery</a></li>
-                                            <li><a class="dropdown-item" href="single-video.html">Single Video</a></li>
-                                            <li><a class="dropdown-item" href="single-audio.html">Single Audio</a></li>
-                                            <li><a class="dropdown-item" href="single-no-media.html">Single No Media</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a class="dropdown-item" href="page.html">Default Page</a></li>
-                                    <li><a class="dropdown-item" href="page-fullwidth.html">Fullwidth Page</a></li>
-                                    <li><a class="dropdown-item" href="page-404.html">Not Found Page</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item dropdown has-submenu">
-                                <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>
-                                <ul class="dropdown-menu" aria-labelledby="dropdown03">
-                                    <li><a class="dropdown-item" href="#">Portfolio Grid <span class="hidden-md-down hidden-sm-down hidden-xs-down"><i class="fa fa-angle-right"></i></span></a>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="portfolio-grid-01.html">Portfolio Grid 01</a></li>
-                                            <li><a class="dropdown-item" href="portfolio-grid-02.html">Portfolio Grid 02</a></li>
-                                            <li><a class="dropdown-item" href="portfolio-grid-03.html">Portfolio Grid 03</a></li>
-                                            <li><a class="dropdown-item" href="portfolio-grid-04.html">Portfolio Grid 04</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Portfolio List <span class="hidden-md-down hidden-sm-down hidden-xs-down"><i class="fa fa-angle-right"></i></span></a>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="portfolio-list-01.html">Portfolio List 01</a></li>
-                                            <li><a class="dropdown-item" href="portfolio-list-02.html">Portfolio List 02</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Portfolio Classic <span class="hidden-md-down hidden-sm-down hidden-xs-down"><i class="fa fa-angle-right"></i></span></a>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="portfolio-classic-01.html">Portfolio Classic 01</a></li>
-                                            <li><a class="dropdown-item" href="portfolio-classic-02.html">Portfolio Classic 02</a></li>
-                                            <li><a class="dropdown-item" href="portfolio-classic-03.html">Portfolio Classic 03</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Portfolio Masonry <span class="hidden-md-down hidden-sm-down hidden-xs-down"><i class="fa fa-angle-right"></i></span></a>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="portfolio-masonry-01.html">Portfolio Masonry 01</a></li>
-                                            <li><a class="dropdown-item" href="portfolio-masonry-02.html">Portfolio Masonry 02</a></li>
-                                            <li><a class="dropdown-item" href="portfolio-masonry-03.html">Portfolio Masonry 03</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a class="dropdown-item" href="single-portfolio.html">Portfolio Single 01</a></li>
-                                    <li><a class="dropdown-item" href="single-portfolio-01.html">Portfolio Single 02</a></li>
-                                    <li><a class="dropdown-item" href="single-portfolio-02.html">Portfolio Single 03</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item dropdown has-submenu">
-                                <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
-                                <ul class="dropdown-menu" aria-labelledby="dropdown04">
-                                    <li><a class="dropdown-item" href="shop.html">Shop Layout</a></li>
-                                    <li><a class="dropdown-item" href="shop-single.html">Shop Single</a></li>
-                                    <li><a class="dropdown-item" href="shop-checkout.html">Shop Checkout</a></li>
-                                    <li><a class="dropdown-item" href="shop-cart.html">Shopping Cart</a></li>
-                                    <li><a class="dropdown-item" href="shop-account.html">My Account</a></li>
-                                    <li><a class="dropdown-item" href="shop-login.html">Login & Register</a></li>
-                                    <li><a class="dropdown-item" href="shop-tracking.html">Order Tracking</a></li>
-                                </ul>
-                            </li>   
+                            <li  class="nav-item"><a class="nav-link" href="page-services.html">Our Services</a></li>
+                            <li class="nav-item"><a class="nav-link" href="portfolio-list-02.html">Projects</a></li>
                             <li class="nav-item">
-                                <a class="nav-link" href="blog.html">Blog</a>
-                            </li>
-                            <li class="nav-item active">
                                 <a class="nav-link" href="page-contact.html">Contact</a>
                             </li>
                         </ul>
