--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                                 <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="page-about.html">About</a>
+                                <a class="nav-link" id="about">About</a>
                             </li>
-                            <li  class="nav-item"><a class="nav-link" href="page-services.html">Our Services</a></li>
+                            <li  class="nav-item"><a class="nav-link" id="services">Our Services</a></li>
                             <li class="nav-item"><a class="nav-link" href="portfolio-list-02.html">Projects</a></li>
                             <li class="nav-item">
                                 <a class="nav-link" href="page-contact.html">Contact</a>
@@ -329,7 +329,7 @@
             </div>
         </div>
 
-        <section class="section bgwhite">
+        <section class="section bgwhite" id="aboutus">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -435,7 +435,7 @@
 <!-- end section -->
 
 
-        <section id="video" class="video-section section">
+        <section id="video-offer" class="video-section section">
             <div class="overlay offer"></div>
             <div class="container">
                 <div class="row">
@@ -815,14 +815,14 @@
                     <div class="col-lg-5 col-md-12 col-sm-12">
                         <div class="widget clearfix">
                             <div class="text-widget">
-                                <a class="" href="index.html"><img src="images/flogo.png" alt=""></a>
-                                <p>Ut sed justo elit. Nunc nec nisi venenatis, tempor neque non, ullamcorper leo. Morbi nec tellus pulvinar, luctus nisi dapibus, maximus diam cras ametcras placerat tincidunt.</p>
+                                <a class="" href="index.html"><img src="images/LOGO.png" alt=""></a>
+                                <p>With a legacy of craftsmanship and innovation, we are dedicated to creating functional, aesthetic, and high-quality spaces. From concept to completion, we bring your vision to life with precision and expertise. Let’s build something remarkable together!.</p>
                                 <div class="social">
-                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>              
-                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter"></i></a>
-                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Instagram"><i class="fa fa-instagram"></i></a>
-                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Google Plus"><i class="fa fa-google-plus"></i></a>
-                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Pinterest"><i class="fa fa-pinterest"></i></a>
+                                    <a href="https://www.facebook.com/profile.php?id=61572294320735" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>              
+                                    <a href=" https://www.linkedin.com/company/houseofdesignz" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-linkedin"></i></a>
+                                    <a href="https://www.instagram.com/house.of.designz/" data-toggle="tooltip" data-placement="bottom" title="Instagram"><i class="fa fa-instagram"></i></a>
+                                    <a href=" https://www.youtube.com/@house.of.designz" data-toggle="tooltip" data-placement="bottom" title="Google Plus"><i class="fa fa-youtube"></i></a>
+                                    
                                 </div>
                             </div>
                         </div><!-- end image-box -->
@@ -833,49 +833,49 @@
                             <h4 class="widget-title">Instagram <i class="fa fa-instagram"></i></h4>
                             <div class="instagram-widget">
                                 <div class="instagram-wrapper clearfix">
-                                    <a href="#">
-                                        <img src="upload/insta_01.jpg" alt="" class="img-fluid">
+                                    <a href="https://www.instagram.com/p/DHaBWi_pJEQ/">
+                                        <img src="upload/insta_01.jpg" alt="" class="img-fluid" height=268 width=267>
                                         <div class="magnifier">
                                             <i class="fa fa-instagram"></i>
                                         </div>
                                     </a>
-                                    <a href="#">
+                                    <a href="https://www.instagram.com/p/DHFbb_nJQCl/">
                                         <img src="upload/insta_02.jpg" alt="" class="img-fluid">
                                         <div class="magnifier">
                                             <i class="fa fa-instagram"></i>
                                         </div>
                                     </a>
-                                    <a href="#">
+                                    <a href="https://www.instagram.com/p/DHBGgkdpHFa/">
                                         <img src="upload/insta_03.jpg" alt="" class="img-fluid">
                                         <div class="magnifier">
                                             <i class="fa fa-instagram"></i>
                                         </div>
                                     </a>
-                                    <a href="#">
+                                    <a href="https://www.instagram.com/p/DGDlH6kpIF9/">
                                         <img src="upload/insta_04.jpg" alt="" class="img-fluid">
                                         <div class="magnifier">
                                             <i class="fa fa-instagram"></i>
                                         </div>
                                     </a>
-                                    <a href="#">
+                                    <a href="https://www.instagram.com/p/DF0o4pSznVb/">
                                         <img src="upload/insta_05.jpg" alt="" class="img-fluid">
                                         <div class="magnifier">
                                             <i class="fa fa-instagram"></i>
                                         </div>
                                     </a>
-                                    <a href="#">
+                                    <a href="https://www.instagram.com/p/DDg6ahypxmS/?img_index=1">
                                         <img src="upload/insta_06.jpg" alt="" class="img-fluid">
                                         <div class="magnifier">
                                             <i class="fa fa-instagram"></i>
                                         </div>
                                     </a>
-                                    <a href="#">
+                                    <a href="https://www.instagram.com/p/CTbyWcPJc1s/">
                                         <img src="upload/insta_07.jpg" alt="" class="img-fluid">
                                         <div class="magnifier">
                                             <i class="fa fa-instagram"></i>
                                         </div>
                                     </a>
-                                    <a href="#">
+                                    <a href="https://www.instagram.com/p/DHVqkSMJKxz/">
                                         <img src="upload/insta_08.jpg" alt="" class="img-fluid">
                                         <div class="magnifier">
                                             <i class="fa fa-instagram"></i>
@@ -891,11 +891,8 @@
                             <h4 class="widget-title">Contact Details</h4>
                             <div class="contact-widget">
                                 <ul>
-                                    <li><span>Phone</span> +90 534 970 00 00</li>
-                                    <li><span>Fax</span> +90 534 970 00 01</li>
-                                    <li><span>E-Mail</span> <a href="#"><span class="__cf_email__" data-cfemail="d0b9beb6bf90a9bfa5a2a3b9a4b5feb3bfbd">[email&#160;protected]</span></a></li>
-                                    <li><span>Ticket</span> <a href="#"><span class="__cf_email__" data-cfemail="2f5b464c444a5b5c6f56405a5d5c465b4a014c4042">[email&#160;protected]</span></a></li>
-                                    <li><span>Website</span> yoursite.com</li>
+                                    <li><span>Phone</span> +91 9778273179</li>
+                                    <li><span>Website</span>houseofdesigns.com</li>
                                     <li><span>Address</span> <a href="#">Google Map</a></li>
                                 </ul>
                             </div>
@@ -908,7 +905,7 @@
         <footer class="copyrights footer">
             <div class="container">
                 <p class="float-right"><a class="dmtop" href="#">Back to top <i class="fa fa-long-arrow-up"></i></a></p>
-                <p>&copy; 2017 Initiative, Inc. &middot; Designed by <a href="https://html.design/" title="Free Website templates">Free Website templates</a> &middot; Powered by <a href="#">Bootstrap Framework</a></p>
+                <p>&copy; 2025 House of Designs, Inc. &middot; Designed by <a href="https://html.design/" title="Free Website templates">Free Website templates</a> &middot; Powered by <a href="#">Bootstrap Framework</a></p>
             </div><!-- end container -->
         </footer><!-- end footer -->
     </div><!-- end wrapper -->
@@ -934,6 +931,24 @@
   $(function(){
       $("#includedContent").load("https://html.design/demo/htmlads.html"); 
     });
+  </script>
+
+  <script>
+    document
+  .getElementById("about")
+  .addEventListener("click", function () {
+    const section4 = document.getElementById("aboutus");
+    section4.scrollIntoView({ behavior: "smooth", block: "start" });
+  });
+  </script>
+
+  <script>
+      document
+  .getElementById("services")
+  .addEventListener("click", function () {
+    const section5 = document.getElementById("video-offer");
+    section5.scrollIntoView({ behavior: "smooth", block: "start" });
+  });
   </script>
   
   </body>
