--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
     </button>
 
     <div class="navbar-grid-container">
-        <!-- Logo Section -->
+        <!-- LOGO Section -->
         <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="" width="60px" height="60px">
+            <img src="images/LOGO.png" alt="" width="60px" height="60px">
         </a>
 
         <!-- Title Section -->
@@ -149,7 +149,7 @@
                     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/LOGO.png" alt=""></a>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
@@ -815,7 +815,7 @@
                     <div class="col-lg-5 col-md-12 col-sm-12">
                         <div class="widget clearfix">
                             <div class="text-widget">
-                                <a class="" href="index.html"><img src="images/logo.png" alt=""></a>
+                                <a class="" href="index.html"><img src="images/LOGO.png" alt=""></a>
                                 <p>With a legacy of craftsmanship and innovation, we are dedicated to creating functional, aesthetic, and high-quality spaces. From concept to completion, we bring your vision to life with precision and expertise. Let’s build something remarkable together!.</p>
                                 <div class="social">
                                     <a href="https://www.facebook.com/profile.php?id=61572294320735" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>              
