--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- Site Metas -->
-    <title>Initiative - Interior Design & Architect Company Template</title>
+    <title>HOUSE OF DESIGNS</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
