--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <meta name="author" content="">
     
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="shortcut icon" href="images/LOGO.png" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="images/LOGO.png">
     
     <!-- Design fonts -->
     <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700&amp;subset=latin-ext" rel="stylesheet">
