--- a/index.html
+++ b/index.html
@@ -117,21 +117,14 @@
         <!-- Navigation Menu Section -->
         <div class="collapse navbar-collapse" id="navbarMbileMenu">
             <ul class="navbar-nav">
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="page-about.html">About</a>
+                    <a class="nav-link" id="about">About</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio-grid-01.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="shop.html">Shop</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="blog.html">Blog</a>
-                </li>
+                <li  class="nav-item"><a class="nav-link" id="services">Our Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="portfolio-list-02.html">Projects</a></li>
                 <li class="nav-item">
                     <a class="nav-link" href="page-contact.html">Contact</a>
                 </li>
