--- a/portfolio-list-02.html
+++ b/portfolio-list-02.html
@@ -90,34 +90,42 @@
 
         <header class="header normal-header mobile-menu">
             <div class="container">
-                <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
-                    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarMbileMenu" aria-controls="navbarMbileMenu" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt=""></a>
-                    <div class="collapse navbar-collapse" id="navbarMbileMenu">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="page-about.html">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="portfolio-grid-01.html">Portfolio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="shop.html">Shop</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="blog.html">Blog</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="page-contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
+               <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarMbileMenu" aria-controls="navbarMbileMenu" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="navbar-grid-container">
+        <!-- LOGO Section -->
+        <a class="navbar-brand" href="index.html">
+            <img src="images/LOGO.png" alt="" width="60px" height="60px">
+        </a>
+
+        <!-- Title Section -->
+        <div class="title">HOUSE OF 
+            <div class="title designs">DESIGNS</div>
+        </div>
+        
+
+        <!-- Navigation Menu Section -->
+        <div class="collapse navbar-collapse" id="navbarMbileMenu">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="about">About</a>
+                </li>
+                <li  class="nav-item"><a class="nav-link" id="services">Our Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="portfolio-list-02.html">Projects</a></li>
+                <li class="nav-item">
+                    <a class="nav-link" href="page-contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
             </div><!-- end container -->
         </header><!-- end header -->
 
