--- a/index.html
+++ b/index.html
@@ -160,16 +160,13 @@
 
                         <div class="nav navbar-nav ml-auto hidden-md-down hidden-sm-down hidden-xs-down">
                             <div class="social">
-                                <a href="#" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>              
-                                <a href="#" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter"></i></a>
-                                <a href="#" data-toggle="tooltip" data-placement="bottom" title="Instagram"><i class="fa fa-instagram"></i></a>
-                                <a href="#" data-toggle="tooltip" data-placement="bottom" title="Google Plus"><i class="fa fa-google-plus"></i></a>
-                                <a href="#" data-toggle="tooltip" data-placement="bottom" title="Pinterest"><i class="fa fa-pinterest"></i></a>
+                                <a href="https://www.facebook.com/profile.php?id=61572294320735" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>              
+                                <a href="https://www.linkedin.com/company/houseofdesignz" data-toggle="tooltip" data-placement="bottom" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+                                <a href="https://www.instagram.com/house.of.designz/" data-toggle="tooltip" data-placement="bottom" title="Instagram"><i class="fa fa-instagram"></i></a>
+                                
                             </div>
 
-                            <div class="menu-right">
-                                <a id="nav-expander" href="#" data-toggle="tooltip" data-placement="bottom" title="Open Menu"><i class="fa fa-bars"></i></a>
-                            </div><!-- end social -->
+    <!-- end social -->
                         </div>
                     </div>
                 </nav>
@@ -886,7 +883,9 @@
                                 <ul>
                                     <li><span>Phone</span> +91 9778273179</li>
                                     <li><span>Website</span>houseofdesigns.com</li>
-                                    <li><span>Address</span> <a href="#">Google Map</a></li>
+                                    <li><span>Address</span> Janakeeya Nagar, Pavathyar Jn, Pattathanam P.O,
+                                        Arvin Homes, Kollam
+                                        KERALA</li>
                                 </ul>
                             </div>
                         </div><!-- end image-box -->
