--- a/portfolio-list-02.html
+++ b/portfolio-list-02.html
@@ -135,7 +135,7 @@
                     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/LOGO.png" alt=""></a>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
@@ -144,7 +144,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="page-about.html">About</a>
                             </li>
-                            <li  class="nav-item"><a class="nav-link" href="page-services.html">Our Services</a></li>
+                            <li  class="nav-item"><a class="nav-link" href="index.html">Our Services</a></li>
                             <li class="nav-item"><a class="nav-link" href="portfolio-list-02.html">Projects</a></li>
                             <li class="nav-item">
                                 <a class="nav-link" href="page-contact.html">Contact</a>
