--- a/page-contact.html
+++ b/page-contact.html
@@ -144,7 +144,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="page-about.html">About</a>
                             </li>
-                            <li  class="nav-item"><a class="nav-link" href="page-services.html">Our Services</a></li>
+                            <li  class="nav-item"><a class="nav-link" href="index.html">Our Services</a></li>
                             <li class="nav-item"><a class="nav-link" href="portfolio-list-02.html">Projects</a></li>
                             <li class="nav-item">
                                 <a class="nav-link" href="page-contact.html">Contact</a>
