--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                 </div>
 
                                 <!-- LAYER NR. 3 -->
-                                <div class="tp-caption NotGeneric-CallToAction rev-btn" 
+                                <!-- <div class="tp-caption NotGeneric-CallToAction rev-btn" 
                                     id="slide-1699-layer-75555" 
                                     data-x="['left','left','left','center']" data-hoffset="['105','107','60','0']" 
                                     data-y="['middle','middle','middle','middle']" data-voffset="['144','144','144','125']" 
