--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                 </div>
 
                                 <!-- LAYER NR. 3 -->
-                                <!-- <div class="tp-caption NotGeneric-CallToAction rev-btn" 
+                                <div class="tp-caption NotGeneric-CallToAction rev-btn" 
                                     id="slide-1699-layer-75555" 
                                     data-x="['left','left','left','center']" data-hoffset="['105','107','60','0']" 
                                     data-y="['middle','middle','middle','middle']" data-voffset="['144','144','144','125']" 
@@ -311,7 +311,7 @@
                                     data-paddingright="[40,40,40,40]"
                                     data-paddingbottom="[15,15,15,15]"
                                     data-paddingleft="[40,40,40,40]"
-                                    style="z-index: 9; color:#f7bd1f; white-space: nowrap;text-transform:left;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer; font-family: Oswald; letter-spacing: 1px;">VIEW ALL MODELS</div>
+                                    style="z-index: 9; color:#f7bd1f; white-space: nowrap;text-transform:left;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer; font-family: Oswald; letter-spacing: 1px;"></div>
                             </li>
                         </ul>
                     </div>
