--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" id="about">About</a>
                             </li>
-                            <li  class="nav-item"><a class="nav-link" id="services">Our Services</a></li>
+                            <li  class="nav-item"><a class="nav-link" id="services" style="cursor: pointer;">Our Services</a></li>
                             <li class="nav-item"><a class="nav-link" href="portfolio-list-02.html">Projects</a></li>
                             <li class="nav-item">
                                 <a class="nav-link" href="page-contact.html">Contact</a>
