--- a/index.html
+++ b/index.html
@@ -207,24 +207,24 @@
 
                                 <!-- LAYER NR.2 -->
                                 <div class="tp-caption NotGeneric-SubTitle   tp-resizeme" 
-                                    id="slide-3045-layer-4" 
-                                    data-x="['left','left','left','center']" data-hoffset="['105','110','60','0']" 
-                                    data-y="['middle','middle','middle','center']" data-voffset="['55','55','55','40']" 
-                                    data-width="none"
-                                    data-height="none"
-                                    data-fontsize="['18','18','18','14']"
-                                    data-lineheight="['31','31','31','19']"
-                                    data-whitespace="nowrap"
-                                    data-type="text" 
-                                    data-responsive_offset="on" 
-                                    data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
-                                    data-textAlign="['left','left','left','left']"
-                                    data-paddingtop="[0,0,0,0]"
-                                    data-paddingright="[0,0,0,90]"
-                                    data-paddingbottom="[0,0,0,0]"
-                                    data-paddingleft="[0,0,0,90]"
-                                    style="z-index: 6; white-space: nowrap;text-transform:left;">We specialize in architectural planning, construction,and project management for residential, commercial <br> and institutional projects across Kerala.
-                                </div>
+                                id="slide-3045-layer-4444" 
+                                data-x="['left','left','left','center']" data-hoffset="['105','110','60','0']" 
+                                data-y="['middle','middle','middle','middle']" data-voffset="['55','55','55','40']" 
+                                data-width="none"
+                                data-height="none"
+                                data-fontsize="['18','18','18','14']"
+                                data-lineheight="['31','31','31','19']"
+                                data-whitespace="nowrap"
+                                data-type="text" 
+                                data-responsive_offset="on" 
+                                data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
+                                data-textAlign="['left','left','left','left']"
+                                data-paddingtop="[0,0,0,0]"
+                                data-paddingright="[0,0,0,0]"
+                                data-paddingbottom="[0,0,0,0]"
+                                data-paddingleft="[0,0,0,0]"
+                                style="z-index: 6; white-space: nowrap;text-transform:left; font-size: 24px;">We specialize in architectural planning, construction,and <br> project management for residential, commercial <br> and institutional projects across Kerala.
+                            </div>
 
                                 <!-- LAYER NR. 3 -->
                                 <div class="tp-caption NotGeneric-CallToAction rev-btn" 
