--- a/portfolio-list-02.html
+++ b/portfolio-list-02.html
@@ -400,10 +400,8 @@
                             <div class="contact-widget">
                                 <ul>
                                     <li><span>Phone</span> +91 9778273179</li>
-                                    <li><span>Website</span>houseofdesigns.com</li>
-                                    <li><span>Address</span>Janakeeya Nagar, Pavathyar Jn, Pattathanam P.O,
-                                        Arvin Homes, Kollam
-                                        KERALA</li>
+                                    <li><span>Website</span>houseofdesigns.co</li>
+                                    <li><span>Address</span>2nd floor, Arvin Homes, Pattathanam P.O, Kollam, KERALA</li>
                                 </ul>
                             </div>
                         </div><!-- end image-box -->
