--- a/page-contact.html
+++ b/page-contact.html
@@ -44,11 +44,11 @@
 </head>
 <body>
 
-    <div id="loader-wrapper">
+    <!-- <div id="loader-wrapper">
         <div id="loader"></div>
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
-    </div>
+    </div> -->
 
     <div id="wrapper">
         <div class="sidewrapper sidenav">
@@ -203,7 +203,7 @@
                                 </li>
                                 <li>
                                     <h3 class="widget-title">Our Phones</h3>
-                                    <small>+91 9446273179<br>+91 9446273179<br>+91 9447010534</small>
+                                    <small>+91 9446273179<br>+91 9778273179<br>+91 9447010534</small>
                                 </li>
                                 <li>
                                     <h3 class="widget-title">Our Email</h3>
