--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
                             <h4>Karthik Udayakumar</h4>
                             <div class="service-small-desc">
                                 <p>I am a Civil Engineer with a master’s degree in Water Resources Engineering from the College of Engineering Trivandrum. As the Managing Director of House of Designs, I lead a construction consultancy specializing in residential, commercial, and institutional projects. </p>
-                                <a href="#" class="readmore">READ MORE</a>
+                                <a href="#" class="readmore"></a>
                             </div>
                         </div>
                     </div>
@@ -743,7 +743,7 @@
                             <h4>Udayakumar A P</h4>
                             <div class="service-small-desc">
                                 <p>Udayakumar A P is the Founder of House of Designs, a trusted construction consultancy established in 1990. With a vision for quality and precision, he transformed a small drafting office into a full-fledged firm specializing in residential, commercial, and institutional projects. </p>
-                                <a href="#" class="readmore">READ MORE</a>
+                                <a href="#" class="readmore"></a>
                             </div>
                         </div>
                     </div>
