--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
         <footer class="copyrights footer">
             <div class="container">
                 <p class="float-right"><a class="dmtop" href="#">Back to top <i class="fa fa-long-arrow-up"></i></a></p>
-                <p>&copy; 2025 House of Designs, Inc. &middot; Designed by <a href="https://html.design/" title="Free Website templates">Free Website templates</a> &middot; Powered by <a href="#">Bootstrap Framework</a></p>
+                <p>&copy; 2025 House of Designs, Inc. &middot; Powered by <a href="#">Bootstrap Framework</a></p>
             </div><!-- end container -->
         </footer><!-- end footer -->
     </div><!-- end wrapper -->
